fix 手機版 overflow-x 的問題

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -648,7 +648,7 @@ html .counter {
 }
 
 @media (max-width: 991px) {
-  #fullpage .sectopm {
+  #fullpage .section {
     overflow: hidden;
   }
 }
