--- a/assets/styles/scss/_myfullpage.scss
+++ b/assets/styles/scss/_myfullpage.scss
@@ -30,7 +30,7 @@
     }
 
     @media (max-width: 991px) {
-        .sectopm {
+        .section {
             overflow: hidden;
         }
     }
